// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NODE_ENV=development > 'component-whitespacing' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);
import { RuntimeTrans as L4aRuntimeTrans } from "lingui-for-astro/runtime";
---

<L4aRuntimeTrans {.../*i18n*/
{
  id: "/txFeF",
  message: "Before {value} After",
  values: {
    value: value
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "DFZbAv",
  message: "Before{value}After",
  values: {
    value: value
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "/txFeF",
  message: "Before {value} After",
  values: {
    value: value
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "INRnBm",
  message: " Before  {value}  After ",
  values: {
    value: value
  }
}} />"
`;

exports[`NODE_ENV=development > 'component-whitespacing' > official react transform 1`] = `
"import { Trans as _Trans } from "@lingui/react";
function Example() {
  return <>
      <_Trans {...
    /*i18n*/
    {
      id: "/txFeF",
      message: "Before {value} After",
      values: {
        value: value
      }
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "DFZbAv",
      message: "Before{value}After",
      values: {
        value: value
      }
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "/txFeF",
      message: "Before {value} After",
      values: {
        value: value
      }
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "INRnBm",
      message: " Before  {value}  After ",
      values: {
        value: value
      }
    }} />
    </>;
}"
`;

exports[`NODE_ENV=development > 'component-whitespacing' > svelte transform 1`] = `
"<script lang="ts">
  import { RuntimeTrans as L4sRuntimeTrans } from "lingui-for-svelte/runtime";
</script>

<L4sRuntimeTrans {.../*i18n*/
{
  id: "/txFeF",
  message: "Before {value} After",
  values: {
    value: value
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "DFZbAv",
  message: "Before{value}After",
  values: {
    value: value
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "/txFeF",
  message: "Before {value} After",
  values: {
    value: value
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "INRnBm",
  message: " Before  {value}  After ",
  values: {
    value: value
  }
}} />"
`;

exports[`NODE_ENV=development > 'deep-rich-text-trans' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);
import { RuntimeTrans as L4aRuntimeTrans } from "lingui-for-astro/runtime";

const action = "deploy";
const count = 3;
const name = "Ada";
---

<L4aRuntimeTrans {.../*i18n*/
{
  id: "zt7J+8",
  message: "Read <0><1>{name}</1></0> before opening <2>{count}</2> tabs to {action}.",
  values: {
    name: name,
    count: count,
    action: action
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    },
    1: {
      kind: "element",
      tag: "em",
      props: {}
    },
    2: {
      kind: "element",
      tag: "code",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=development > 'deep-rich-text-trans' > official react transform 1`] = `
"import { Trans as _Trans } from "@lingui/react";
export function Example({
  action,
  count,
  name
}: {
  action: string;
  count: number;
  name: string;
}) {
  return <_Trans {...
  /*i18n*/
  {
    id: "zt7J+8",
    message: "Read <0><1>{name}</1></0> before opening <2>{count}</2> tabs to {action}.",
    values: {
      name: name,
      count: count,
      action: action
    },
    components: {
      0: <strong />,
      1: <em />,
      2: <code />
    }
  }} />;
}"
`;

exports[`NODE_ENV=development > 'deep-rich-text-trans' > svelte transform 1`] = `
"<script lang="ts">
  import { RuntimeTrans as L4sRuntimeTrans } from "lingui-for-svelte/runtime";
  let action = $state("deploy");
  let count = $state(3);
  let name = $state("Ada");
</script>

<L4sRuntimeTrans {.../*i18n*/
{
  id: "zt7J+8",
  message: "Read <0><1>{name}</1></0> before opening <2>{count}</2> tabs to {action}.",
  values: {
    name: name,
    count: count,
    action: action
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    },
    1: {
      kind: "element",
      tag: "em",
      props: {}
    },
    2: {
      kind: "element",
      tag: "code",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=development > 'exact-number-component' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);
import { RuntimeTrans as L4aRuntimeTrans } from "lingui-for-astro/runtime";

const count = 2;
const rank = 1;
---

<L4aRuntimeTrans {.../*i18n*/
{
  id: "a+Xhin",
  message: "{count, plural, =0 {no queued builds} =2 {exactly two queued builds} other {# queued builds}}",
  values: {
    count: count
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "gM41pk",
  message: "{rank, selectordinal, =1 {take the shortcut} =2 {take the scenic route} other {finish in #th place}}",
  values: {
    rank: rank
  }
}} />"
`;

exports[`NODE_ENV=development > 'exact-number-component' > official react transform 1`] = `
"import { Trans as _Trans } from "@lingui/react";
export function Example({
  count,
  rank
}: {
  count: number;
  rank: number;
}) {
  return <>
      <_Trans {...
    /*i18n*/
    {
      id: "a+Xhin",
      message: "{count, plural, =0 {no queued builds} =2 {exactly two queued builds} other {# queued builds}}",
      values: {
        count: count
      }
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "gM41pk",
      message: "{rank, selectordinal, =1 {take the shortcut} =2 {take the scenic route} other {finish in #th place}}",
      values: {
        rank: rank
      }
    }} />
    </>;
}"
`;

exports[`NODE_ENV=development > 'exact-number-component' > svelte transform 1`] = `
"<script lang="ts">
  import { RuntimeTrans as L4sRuntimeTrans } from "lingui-for-svelte/runtime";
  let count = $state(2);
  let rank = $state(1);
</script>

<L4sRuntimeTrans {.../*i18n*/
{
  id: "a+Xhin",
  message: "{count, plural, =0 {no queued builds} =2 {exactly two queued builds} other {# queued builds}}",
  values: {
    count: count
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "gM41pk",
  message: "{rank, selectordinal, =1 {take the shortcut} =2 {take the scenic route} other {finish in #th place}}",
  values: {
    rank: rank
  }
}} />"
`;

exports[`NODE_ENV=development > 'nested-icu-core' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);

const count = 0;
const rank = 1;
const role = "admin";
const deepCore = __l4a_i18n._(
/*i18n*/
{
  id: "K9g4/G",
  message: "{count, plural, =0 {{rank, selectordinal, =1 {{role, select, admin {core zero first admin} other {core zero first other}}} other {{role, select, admin {core zero later admin} other {core zero later other}}}}} other {{rank, selectordinal, =1 {{role, select, admin {core many first admin} other {core many first other}}} other {{role, select, admin {core many later admin} other {core many later other}}}}}}",
  values: {
    count: count,
    rank: rank,
    role: role
  }
});
---

<p>{deepCore}</p>"
`;

exports[`NODE_ENV=development > 'nested-icu-core' > official core transform 1`] = `
"import { i18n as _i18n } from "@lingui/core";
export const message = _i18n._(
/*i18n*/
{
  id: "K9g4/G",
  message: "{count, plural, =0 {{rank, selectordinal, =1 {{role, select, admin {core zero first admin} other {core zero first other}}} other {{role, select, admin {core zero later admin} other {core zero later other}}}}} other {{rank, selectordinal, =1 {{role, select, admin {core many first admin} other {core many first other}}} other {{role, select, admin {core many later admin} other {core many later other}}}}}}",
  values: {
    count: count,
    rank: rank,
    role: role
  }
});"
`;

exports[`NODE_ENV=development > 'nested-icu-core' > svelte transform 1`] = `
"<script lang="ts">
  import { createLinguiAccessors as createLinguiAccessors } from "lingui-for-svelte/runtime";
  const __l4s_ctx = createLinguiAccessors();
  const __l4s_getI18n = __l4s_ctx.getI18n;
  const __l4s_translate = __l4s_ctx._;
  let count = $state(0);
  let rank = $state(1);
  let role = $state("admin");

  const deepCore = $derived($__l4s_translate(
  /*i18n*/
  {
    id: "K9g4/G",
    message: "{count, plural, =0 {{rank, selectordinal, =1 {{role, select, admin {core zero first admin} other {core zero first other}}} other {{role, select, admin {core zero later admin} other {core zero later other}}}}} other {{rank, selectordinal, =1 {{role, select, admin {core many first admin} other {core many first other}}} other {{role, select, admin {core many later admin} other {core many later other}}}}}}",
    values: {
      count: count,
      rank: rank,
      role: role
    }
  }));

  __l4s_ctx.prime();
</script>

<p>{deepCore}</p>"
`;

exports[`NODE_ENV=development > 'rich-text-trans' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);
import { RuntimeTrans as L4aRuntimeTrans } from "lingui-for-astro/runtime";

const name = "Ada";
---

<L4aRuntimeTrans {.../*i18n*/
{
  id: "9/omjw",
  message: "Hello <0>{name}</0>.",
  values: {
    name: name
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=development > 'rich-text-trans' > official react transform 1`] = `
"import { Trans as _Trans } from "@lingui/react";
export function Example({
  name
}: {
  name: string;
}) {
  return <_Trans {...
  /*i18n*/
  {
    id: "9/omjw",
    message: "Hello <0>{name}</0>.",
    values: {
      name: name
    },
    components: {
      0: <strong />
    }
  }} />;
}"
`;

exports[`NODE_ENV=development > 'rich-text-trans' > svelte transform 1`] = `
"<script lang="ts">
  import { RuntimeTrans as L4sRuntimeTrans } from "lingui-for-svelte/runtime";
  let name = $state("Ada");
</script>

<L4sRuntimeTrans {.../*i18n*/
{
  id: "9/omjw",
  message: "Hello <0>{name}</0>.",
  values: {
    name: name
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=development > 'trans-with-deeply-nested-component-icu' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);
import { RuntimeTrans as L4aRuntimeTrans } from "lingui-for-astro/runtime";

const count = 0;
const rank = 1;
const role = "admin";
---

<L4aRuntimeTrans {.../*i18n*/
{
  id: "Y5Pnrw",
  message: "Before <0>{count, plural, =0 {{0}} =2 {{1}} other {{2}}}</0> after.",
  values: {
    0: __l4a_i18n._(
    /*i18n*/
    {
      id: "Ro3jDG",
      message: "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    }),
    1: __l4a_i18n._(
    /*i18n*/
    {
      id: "/uwo4+",
      message: "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    }),
    2: __l4a_i18n._(
    /*i18n*/
    {
      id: "OsAInm",
      message: "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    }),
    count: count
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=development > 'trans-with-deeply-nested-component-icu' > official react transform 1`] = `
"import { i18n as _i18n } from "@lingui/core";
import { Trans as _Trans } from "@lingui/react";
export function Example({
  count,
  rank,
  role
}: {
  count: number;
  rank: number;
  role: string;
}) {
  return <_Trans {...
  /*i18n*/
  {
    id: "Y5Pnrw",
    message: "Before <0>{count, plural, =0 {{0}} =2 {{1}} other {{2}}}</0> after.",
    values: {
      0: _i18n._(
      /*i18n*/
      {
        id: "Ro3jDG",
        message: "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
        values: {
          rank: rank,
          role: role
        }
      }),
      1: _i18n._(
      /*i18n*/
      {
        id: "/uwo4+",
        message: "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
        values: {
          rank: rank,
          role: role
        }
      }),
      2: _i18n._(
      /*i18n*/
      {
        id: "OsAInm",
        message: "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
        values: {
          rank: rank,
          role: role
        }
      }),
      count: count
    },
    components: {
      0: <strong />
    }
  }} />;
}"
`;

exports[`NODE_ENV=development > 'trans-with-deeply-nested-component-icu' > svelte transform 1`] = `
"<script lang="ts">
  import { RuntimeTrans as L4sRuntimeTrans } from "lingui-for-svelte/runtime";
  let count = $state(0);
  let rank = $state(1);
  let role = $state("admin");
</script>

<L4sRuntimeTrans {.../*i18n*/
{
  id: "Y5Pnrw",
  message: "Before <0>{count, plural, =0 {{0}} =2 {{1}} other {{2}}}</0> after.",
  values: {
    0: __l4s_getI18n()._(
    /*i18n*/
    {
      id: "Ro3jDG",
      message: "{rank, selectordinal, =1 {{role, select, admin {zero first admin} other {zero first other}}} =2 {{role, select, admin {zero second admin} other {zero second other}}} other {{role, select, admin {zero later admin} other {zero later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    }),
    1: __l4s_getI18n()._(
    /*i18n*/
    {
      id: "/uwo4+",
      message: "{rank, selectordinal, =1 {{role, select, admin {two first admin} other {two first other}}} =2 {{role, select, admin {two second admin} other {two second other}}} other {{role, select, admin {two later admin} other {two later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    }),
    2: __l4s_getI18n()._(
    /*i18n*/
    {
      id: "OsAInm",
      message: "{rank, selectordinal, =1 {{role, select, admin {many first admin} other {many first other}}} =2 {{role, select, admin {many second admin} other {many second other}}} other {{role, select, admin {many later admin} other {many later other}}}}",
      values: {
        rank: rank,
        role: role
      }
    }),
    count: count
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=development > 'trans-with-plural' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);
import { RuntimeTrans as L4aRuntimeTrans } from "lingui-for-astro/runtime";

const count = 0;
---

<L4aRuntimeTrans {.../*i18n*/
{
  id: "BWlbIC",
  message: "You have <0>{count, plural, =0 {no unread messages} one {# unread message} other {# unread messages}}</0>.",
  values: {
    count: count
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=development > 'trans-with-plural' > official react transform 1`] = `
"import { Trans as _Trans } from "@lingui/react";
export function Example({
  count
}: {
  count: number;
}) {
  return <_Trans {...
  /*i18n*/
  {
    id: "BWlbIC",
    message: "You have <0>{count, plural, =0 {no unread messages} one {# unread message} other {# unread messages}}</0>.",
    values: {
      count: count
    },
    components: {
      0: <strong />
    }
  }} />;
}"
`;

exports[`NODE_ENV=development > 'trans-with-plural' > svelte transform 1`] = `
"<script lang="ts">
  import { RuntimeTrans as L4sRuntimeTrans } from "lingui-for-svelte/runtime";
  let count = $state(0);
</script>

<L4sRuntimeTrans {.../*i18n*/
{
  id: "BWlbIC",
  message: "You have <0>{count, plural, =0 {no unread messages} one {# unread message} other {# unread messages}}</0>.",
  values: {
    count: count
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=development > 'with-id-context-comment-component' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);
import { RuntimeTrans as L4aRuntimeTrans } from "lingui-for-astro/runtime";

const value = "foo";
---

<L4aRuntimeTrans {.../*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "with-interpolation-with-id",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "bVvypv",
  message: "Message with interpolation: {value}",
  context: "This is a context",
  values: {
    value: value
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  comment: "This is a comment",
  values: {
    value: value
  }
}} />

<L4aRuntimeTrans {.../*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation"
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation"
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "no-interpolation-with-id",
  message: "Message without interpolation"
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "SSpjjA",
  message: "Message without interpolation",
  context: "This is a context"
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation",
  comment: "This is a comment"
}} />"
`;

exports[`NODE_ENV=development > 'with-id-context-comment-component' > official react transform 1`] = `
"import { Trans as _Trans } from "@lingui/react";
const value = "foo";
function Example() {
  return <>
      <_Trans {...
    /*i18n*/
    {
      id: "dBHrOY",
      message: "Message with interpolation: {value}",
      values: {
        value: value
      }
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "with-interpolation-with-id",
      message: "Message with interpolation: {value}",
      values: {
        value: value
      }
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "bVvypv",
      message: "Message with interpolation: {value}",
      context: "This is a context",
      values: {
        value: value
      }
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "dBHrOY",
      message: "Message with interpolation: {value}",
      comment: "This is a comment",
      values: {
        value: value
      }
    }} />

      <_Trans {...
    /*i18n*/
    {
      id: "YYBbrl",
      message: "Message without interpolation"
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "no-interpolation-with-id",
      message: "Message without interpolation"
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "SSpjjA",
      message: "Message without interpolation",
      context: "This is a context"
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "YYBbrl",
      message: "Message without interpolation",
      comment: "This is a comment"
    }} />
    </>;
}"
`;

exports[`NODE_ENV=development > 'with-id-context-comment-component' > svelte transform 1`] = `
"<script lang="ts">
  import { RuntimeTrans as L4sRuntimeTrans } from "lingui-for-svelte/runtime";
  const value = $state("foo");
</script>

<L4sRuntimeTrans {.../*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "with-interpolation-with-id",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "bVvypv",
  message: "Message with interpolation: {value}",
  context: "This is a context",
  values: {
    value: value
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  comment: "This is a comment",
  values: {
    value: value
  }
}} />

<L4sRuntimeTrans {.../*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation"
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation"
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "no-interpolation-with-id",
  message: "Message without interpolation"
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "SSpjjA",
  message: "Message without interpolation",
  context: "This is a context"
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation",
  comment: "This is a comment"
}} />"
`;

exports[`NODE_ENV=development > 'with-id-context-comment-core' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);

const value = "foo";
---

<p id="v1a">{__l4a_i18n._(
/*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
})}</p>
<p id="v1b">{__l4a_i18n._(
/*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
})}</p>
<p id="v2">{__l4a_i18n._(
/*i18n*/
{
  id: "with-interpolation-with-id",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
})}</p>
<p id="v3">{__l4a_i18n._(
/*i18n*/
{
  id: "bVvypv",
  message: "Message with interpolation: {value}",
  context: "This is a context",
  values: {
    value: value
  }
})}</p>
<p id="v4">{__l4a_i18n._(
/*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  comment: "This is a comment",
  values: {
    value: value
  }
})}</p>

<p id="p1a">{__l4a_i18n._(
/*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation"
})}</p>
<p id="p1b">{__l4a_i18n._(
/*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation"
})}</p>
<p id="p2">{__l4a_i18n._(
/*i18n*/
{
  id: "no-interpolation-with-id",
  message: "Message without interpolation"
})}</p>
<p id="p3">{__l4a_i18n._(
/*i18n*/
{
  id: "SSpjjA",
  message: "Message without interpolation",
  context: "This is a context"
})}</p>
<p id="p4">{__l4a_i18n._(
/*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation",
  comment: "This is a comment"
})}</p>"
`;

exports[`NODE_ENV=development > 'with-id-context-comment-core' > official core transform 1`] = `
"import { i18n as _i18n } from "@lingui/core";
const value = "foo";
const v1a = _i18n._(
/*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
});
const v1b = _i18n._(
/*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
});
const v2 = _i18n._(
/*i18n*/
{
  id: "with-interpolation-with-id",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
});
const v3 = _i18n._(
/*i18n*/
{
  id: "bVvypv",
  message: "Message with interpolation: {value}",
  context: "This is a context",
  values: {
    value: value
  }
});
const v4 = _i18n._(
/*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  comment: "This is a comment",
  values: {
    value: value
  }
});
const p1a = _i18n._(
/*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation"
});
const p1b = _i18n._(
/*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation"
});
const p2 = _i18n._(
/*i18n*/
{
  id: "no-interpolation-with-id",
  message: "Message without interpolation"
});
const p3 = _i18n._(
/*i18n*/
{
  id: "SSpjjA",
  message: "Message without interpolation",
  context: "This is a context"
});
const p4 = _i18n._(
/*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation",
  comment: "This is a comment"
});"
`;

exports[`NODE_ENV=development > 'with-id-context-comment-core' > svelte transform 1`] = `
"<script lang="ts">
  import { createLinguiAccessors as createLinguiAccessors } from "lingui-for-svelte/runtime";
  const __l4s_ctx = createLinguiAccessors();
  const __l4s_getI18n = __l4s_ctx.getI18n;
  const __l4s_translate = __l4s_ctx._;
  const value = $state("foo");

  __l4s_ctx.prime();
</script>

<p id="v1a">{$__l4s_translate(
/*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
})}</p>
<p id="v1b">{$__l4s_translate(
/*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
})}</p>
<p id="v2">{$__l4s_translate(
/*i18n*/
{
  id: "with-interpolation-with-id",
  message: "Message with interpolation: {value}",
  values: {
    value: value
  }
})}</p>
<p id="v3">{$__l4s_translate(
/*i18n*/
{
  id: "bVvypv",
  message: "Message with interpolation: {value}",
  context: "This is a context",
  values: {
    value: value
  }
})}</p>
<p id="v4">{$__l4s_translate(
/*i18n*/
{
  id: "dBHrOY",
  message: "Message with interpolation: {value}",
  comment: "This is a comment",
  values: {
    value: value
  }
})}</p>

<p id="p1a">{$__l4s_translate(
/*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation"
})}</p>
<p id="p1b">{$__l4s_translate(
/*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation"
})}</p>
<p id="p2">{$__l4s_translate(
/*i18n*/
{
  id: "no-interpolation-with-id",
  message: "Message without interpolation"
})}</p>
<p id="p3">{$__l4s_translate(
/*i18n*/
{
  id: "SSpjjA",
  message: "Message without interpolation",
  context: "This is a context"
})}</p>
<p id="p4">{$__l4s_translate(
/*i18n*/
{
  id: "YYBbrl",
  message: "Message without interpolation",
  comment: "This is a comment"
})}</p>"
`;

exports[`NODE_ENV=production > 'component-whitespacing' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);
import { RuntimeTrans as L4aRuntimeTrans } from "lingui-for-astro/runtime";
---

<L4aRuntimeTrans {.../*i18n*/
{
  id: "/txFeF",
  values: {
    value: value
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "DFZbAv",
  values: {
    value: value
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "/txFeF",
  values: {
    value: value
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "INRnBm",
  values: {
    value: value
  }
}} />"
`;

exports[`NODE_ENV=production > 'component-whitespacing' > official react transform 1`] = `
"import { Trans as _Trans } from "@lingui/react";
function Example() {
  return <>
      <_Trans {...
    /*i18n*/
    {
      id: "/txFeF",
      values: {
        value: value
      }
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "DFZbAv",
      values: {
        value: value
      }
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "/txFeF",
      values: {
        value: value
      }
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "INRnBm",
      values: {
        value: value
      }
    }} />
    </>;
}"
`;

exports[`NODE_ENV=production > 'component-whitespacing' > svelte transform 1`] = `
"<script lang="ts">
  import { RuntimeTrans as L4sRuntimeTrans } from "lingui-for-svelte/runtime";
</script>

<L4sRuntimeTrans {.../*i18n*/
{
  id: "/txFeF",
  values: {
    value: value
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "DFZbAv",
  values: {
    value: value
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "/txFeF",
  values: {
    value: value
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "INRnBm",
  values: {
    value: value
  }
}} />"
`;

exports[`NODE_ENV=production > 'deep-rich-text-trans' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);
import { RuntimeTrans as L4aRuntimeTrans } from "lingui-for-astro/runtime";

const action = "deploy";
const count = 3;
const name = "Ada";
---

<L4aRuntimeTrans {.../*i18n*/
{
  id: "zt7J+8",
  values: {
    name: name,
    count: count,
    action: action
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    },
    1: {
      kind: "element",
      tag: "em",
      props: {}
    },
    2: {
      kind: "element",
      tag: "code",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=production > 'deep-rich-text-trans' > official react transform 1`] = `
"import { Trans as _Trans } from "@lingui/react";
export function Example({
  action,
  count,
  name
}: {
  action: string;
  count: number;
  name: string;
}) {
  return <_Trans {...
  /*i18n*/
  {
    id: "zt7J+8",
    values: {
      name: name,
      count: count,
      action: action
    },
    components: {
      0: <strong />,
      1: <em />,
      2: <code />
    }
  }} />;
}"
`;

exports[`NODE_ENV=production > 'deep-rich-text-trans' > svelte transform 1`] = `
"<script lang="ts">
  import { RuntimeTrans as L4sRuntimeTrans } from "lingui-for-svelte/runtime";
  let action = $state("deploy");
  let count = $state(3);
  let name = $state("Ada");
</script>

<L4sRuntimeTrans {.../*i18n*/
{
  id: "zt7J+8",
  values: {
    name: name,
    count: count,
    action: action
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    },
    1: {
      kind: "element",
      tag: "em",
      props: {}
    },
    2: {
      kind: "element",
      tag: "code",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=production > 'exact-number-component' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);
import { RuntimeTrans as L4aRuntimeTrans } from "lingui-for-astro/runtime";

const count = 2;
const rank = 1;
---

<L4aRuntimeTrans {.../*i18n*/
{
  id: "a+Xhin",
  values: {
    count: count
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "gM41pk",
  values: {
    rank: rank
  }
}} />"
`;

exports[`NODE_ENV=production > 'exact-number-component' > official react transform 1`] = `
"import { Trans as _Trans } from "@lingui/react";
export function Example({
  count,
  rank
}: {
  count: number;
  rank: number;
}) {
  return <>
      <_Trans {...
    /*i18n*/
    {
      id: "a+Xhin",
      values: {
        count: count
      }
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "gM41pk",
      values: {
        rank: rank
      }
    }} />
    </>;
}"
`;

exports[`NODE_ENV=production > 'exact-number-component' > svelte transform 1`] = `
"<script lang="ts">
  import { RuntimeTrans as L4sRuntimeTrans } from "lingui-for-svelte/runtime";
  let count = $state(2);
  let rank = $state(1);
</script>

<L4sRuntimeTrans {.../*i18n*/
{
  id: "a+Xhin",
  values: {
    count: count
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "gM41pk",
  values: {
    rank: rank
  }
}} />"
`;

exports[`NODE_ENV=production > 'nested-icu-core' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);

const count = 0;
const rank = 1;
const role = "admin";
const deepCore = __l4a_i18n._(
/*i18n*/
{
  id: "K9g4/G",
  values: {
    count: count,
    rank: rank,
    role: role
  }
});
---

<p>{deepCore}</p>"
`;

exports[`NODE_ENV=production > 'nested-icu-core' > official core transform 1`] = `
"import { i18n as _i18n } from "@lingui/core";
export const message = _i18n._(
/*i18n*/
{
  id: "K9g4/G",
  values: {
    count: count,
    rank: rank,
    role: role
  }
});"
`;

exports[`NODE_ENV=production > 'nested-icu-core' > svelte transform 1`] = `
"<script lang="ts">
  import { createLinguiAccessors as createLinguiAccessors } from "lingui-for-svelte/runtime";
  const __l4s_ctx = createLinguiAccessors();
  const __l4s_getI18n = __l4s_ctx.getI18n;
  const __l4s_translate = __l4s_ctx._;
  let count = $state(0);
  let rank = $state(1);
  let role = $state("admin");

  const deepCore = $derived($__l4s_translate(
  /*i18n*/
  {
    id: "K9g4/G",
    values: {
      count: count,
      rank: rank,
      role: role
    }
  }));

  __l4s_ctx.prime();
</script>

<p>{deepCore}</p>"
`;

exports[`NODE_ENV=production > 'rich-text-trans' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);
import { RuntimeTrans as L4aRuntimeTrans } from "lingui-for-astro/runtime";

const name = "Ada";
---

<L4aRuntimeTrans {.../*i18n*/
{
  id: "9/omjw",
  values: {
    name: name
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=production > 'rich-text-trans' > official react transform 1`] = `
"import { Trans as _Trans } from "@lingui/react";
export function Example({
  name
}: {
  name: string;
}) {
  return <_Trans {...
  /*i18n*/
  {
    id: "9/omjw",
    values: {
      name: name
    },
    components: {
      0: <strong />
    }
  }} />;
}"
`;

exports[`NODE_ENV=production > 'rich-text-trans' > svelte transform 1`] = `
"<script lang="ts">
  import { RuntimeTrans as L4sRuntimeTrans } from "lingui-for-svelte/runtime";
  let name = $state("Ada");
</script>

<L4sRuntimeTrans {.../*i18n*/
{
  id: "9/omjw",
  values: {
    name: name
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=production > 'trans-with-deeply-nested-component-icu' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);
import { RuntimeTrans as L4aRuntimeTrans } from "lingui-for-astro/runtime";

const count = 0;
const rank = 1;
const role = "admin";
---

<L4aRuntimeTrans {.../*i18n*/
{
  id: "Y5Pnrw",
  values: {
    0: __l4a_i18n._(
    /*i18n*/
    {
      id: "Ro3jDG",
      values: {
        rank: rank,
        role: role
      }
    }),
    1: __l4a_i18n._(
    /*i18n*/
    {
      id: "/uwo4+",
      values: {
        rank: rank,
        role: role
      }
    }),
    2: __l4a_i18n._(
    /*i18n*/
    {
      id: "OsAInm",
      values: {
        rank: rank,
        role: role
      }
    }),
    count: count
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=production > 'trans-with-deeply-nested-component-icu' > official react transform 1`] = `
"import { i18n as _i18n } from "@lingui/core";
import { Trans as _Trans } from "@lingui/react";
export function Example({
  count,
  rank,
  role
}: {
  count: number;
  rank: number;
  role: string;
}) {
  return <_Trans {...
  /*i18n*/
  {
    id: "Y5Pnrw",
    values: {
      0: _i18n._(
      /*i18n*/
      {
        id: "Ro3jDG",
        values: {
          rank: rank,
          role: role
        }
      }),
      1: _i18n._(
      /*i18n*/
      {
        id: "/uwo4+",
        values: {
          rank: rank,
          role: role
        }
      }),
      2: _i18n._(
      /*i18n*/
      {
        id: "OsAInm",
        values: {
          rank: rank,
          role: role
        }
      }),
      count: count
    },
    components: {
      0: <strong />
    }
  }} />;
}"
`;

exports[`NODE_ENV=production > 'trans-with-deeply-nested-component-icu' > svelte transform 1`] = `
"<script lang="ts">
  import { RuntimeTrans as L4sRuntimeTrans } from "lingui-for-svelte/runtime";
  let count = $state(0);
  let rank = $state(1);
  let role = $state("admin");
</script>

<L4sRuntimeTrans {.../*i18n*/
{
  id: "Y5Pnrw",
  values: {
    0: __l4s_getI18n()._(
    /*i18n*/
    {
      id: "Ro3jDG",
      values: {
        rank: rank,
        role: role
      }
    }),
    1: __l4s_getI18n()._(
    /*i18n*/
    {
      id: "/uwo4+",
      values: {
        rank: rank,
        role: role
      }
    }),
    2: __l4s_getI18n()._(
    /*i18n*/
    {
      id: "OsAInm",
      values: {
        rank: rank,
        role: role
      }
    }),
    count: count
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=production > 'trans-with-plural' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);
import { RuntimeTrans as L4aRuntimeTrans } from "lingui-for-astro/runtime";

const count = 0;
---

<L4aRuntimeTrans {.../*i18n*/
{
  id: "BWlbIC",
  values: {
    count: count
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=production > 'trans-with-plural' > official react transform 1`] = `
"import { Trans as _Trans } from "@lingui/react";
export function Example({
  count
}: {
  count: number;
}) {
  return <_Trans {...
  /*i18n*/
  {
    id: "BWlbIC",
    values: {
      count: count
    },
    components: {
      0: <strong />
    }
  }} />;
}"
`;

exports[`NODE_ENV=production > 'trans-with-plural' > svelte transform 1`] = `
"<script lang="ts">
  import { RuntimeTrans as L4sRuntimeTrans } from "lingui-for-svelte/runtime";
  let count = $state(0);
</script>

<L4sRuntimeTrans {.../*i18n*/
{
  id: "BWlbIC",
  values: {
    count: count
  },
  components: {
    0: {
      kind: "element",
      tag: "strong",
      props: {}
    }
  }
}} />"
`;

exports[`NODE_ENV=production > 'with-id-context-comment-component' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);
import { RuntimeTrans as L4aRuntimeTrans } from "lingui-for-astro/runtime";

const value = "foo";
---

<L4aRuntimeTrans {.../*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "with-interpolation-with-id",
  values: {
    value: value
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "bVvypv",
  values: {
    value: value
  }
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
}} />

<L4aRuntimeTrans {.../*i18n*/
{
  id: "YYBbrl"
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "YYBbrl"
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "no-interpolation-with-id"
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "SSpjjA"
}} />
<L4aRuntimeTrans {.../*i18n*/
{
  id: "YYBbrl"
}} />"
`;

exports[`NODE_ENV=production > 'with-id-context-comment-component' > official react transform 1`] = `
"import { Trans as _Trans } from "@lingui/react";
const value = "foo";
function Example() {
  return <>
      <_Trans {...
    /*i18n*/
    {
      id: "dBHrOY",
      values: {
        value: value
      }
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "with-interpolation-with-id",
      values: {
        value: value
      }
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "bVvypv",
      values: {
        value: value
      }
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "dBHrOY",
      values: {
        value: value
      }
    }} />

      <_Trans {...
    /*i18n*/
    {
      id: "YYBbrl"
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "no-interpolation-with-id"
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "SSpjjA"
    }} />
      <_Trans {...
    /*i18n*/
    {
      id: "YYBbrl"
    }} />
    </>;
}"
`;

exports[`NODE_ENV=production > 'with-id-context-comment-component' > svelte transform 1`] = `
"<script lang="ts">
  import { RuntimeTrans as L4sRuntimeTrans } from "lingui-for-svelte/runtime";
  const value = $state("foo");
</script>

<L4sRuntimeTrans {.../*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "with-interpolation-with-id",
  values: {
    value: value
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "bVvypv",
  values: {
    value: value
  }
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
}} />

<L4sRuntimeTrans {.../*i18n*/
{
  id: "YYBbrl"
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "YYBbrl"
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "no-interpolation-with-id"
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "SSpjjA"
}} />
<L4sRuntimeTrans {.../*i18n*/
{
  id: "YYBbrl"
}} />"
`;

exports[`NODE_ENV=production > 'with-id-context-comment-core' > astro transform 1`] = `
"---
import { createFrontmatterI18n as __l4a_createI18n } from "lingui-for-astro/runtime";
const __l4a_i18n = __l4a_createI18n(Astro.locals);

const value = "foo";
---

<p id="v1a">{__l4a_i18n._(
/*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
})}</p>
<p id="v1b">{__l4a_i18n._(
/*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
})}</p>
<p id="v2">{__l4a_i18n._(
/*i18n*/
{
  id: "with-interpolation-with-id",
  values: {
    value: value
  }
})}</p>
<p id="v3">{__l4a_i18n._(
/*i18n*/
{
  id: "bVvypv",
  values: {
    value: value
  }
})}</p>
<p id="v4">{__l4a_i18n._(
/*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
})}</p>

<p id="p1a">{__l4a_i18n._(
/*i18n*/
{
  id: "YYBbrl"
})}</p>
<p id="p1b">{__l4a_i18n._(
/*i18n*/
{
  id: "YYBbrl"
})}</p>
<p id="p2">{__l4a_i18n._(
/*i18n*/
{
  id: "no-interpolation-with-id"
})}</p>
<p id="p3">{__l4a_i18n._(
/*i18n*/
{
  id: "SSpjjA"
})}</p>
<p id="p4">{__l4a_i18n._(
/*i18n*/
{
  id: "YYBbrl"
})}</p>"
`;

exports[`NODE_ENV=production > 'with-id-context-comment-core' > official core transform 1`] = `
"import { i18n as _i18n } from "@lingui/core";
const value = "foo";
const v1a = _i18n._(
/*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
});
const v1b = _i18n._(
/*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
});
const v2 = _i18n._(
/*i18n*/
{
  id: "with-interpolation-with-id",
  values: {
    value: value
  }
});
const v3 = _i18n._(
/*i18n*/
{
  id: "bVvypv",
  values: {
    value: value
  }
});
const v4 = _i18n._(
/*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
});
const p1a = _i18n._(
/*i18n*/
{
  id: "YYBbrl"
});
const p1b = _i18n._(
/*i18n*/
{
  id: "YYBbrl"
});
const p2 = _i18n._(
/*i18n*/
{
  id: "no-interpolation-with-id"
});
const p3 = _i18n._(
/*i18n*/
{
  id: "SSpjjA"
});
const p4 = _i18n._(
/*i18n*/
{
  id: "YYBbrl"
});"
`;

exports[`NODE_ENV=production > 'with-id-context-comment-core' > svelte transform 1`] = `
"<script lang="ts">
  import { createLinguiAccessors as createLinguiAccessors } from "lingui-for-svelte/runtime";
  const __l4s_ctx = createLinguiAccessors();
  const __l4s_getI18n = __l4s_ctx.getI18n;
  const __l4s_translate = __l4s_ctx._;
  const value = $state("foo");

  __l4s_ctx.prime();
</script>

<p id="v1a">{$__l4s_translate(
/*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
})}</p>
<p id="v1b">{$__l4s_translate(
/*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
})}</p>
<p id="v2">{$__l4s_translate(
/*i18n*/
{
  id: "with-interpolation-with-id",
  values: {
    value: value
  }
})}</p>
<p id="v3">{$__l4s_translate(
/*i18n*/
{
  id: "bVvypv",
  values: {
    value: value
  }
})}</p>
<p id="v4">{$__l4s_translate(
/*i18n*/
{
  id: "dBHrOY",
  values: {
    value: value
  }
})}</p>

<p id="p1a">{$__l4s_translate(
/*i18n*/
{
  id: "YYBbrl"
})}</p>
<p id="p1b">{$__l4s_translate(
/*i18n*/
{
  id: "YYBbrl"
})}</p>
<p id="p2">{$__l4s_translate(
/*i18n*/
{
  id: "no-interpolation-with-id"
})}</p>
<p id="p3">{$__l4s_translate(
/*i18n*/
{
  id: "SSpjjA"
})}</p>
<p id="p4">{$__l4s_translate(
/*i18n*/
{
  id: "YYBbrl"
})}</p>"
`;
